<resources>
    <string name="app_name">Fitness</string>
    <string name="title_activity_daily">Daily</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="weight">Weight(Kg)</string>
    <string name="height">Height(cm)</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="lets_start_the_journey">Lets start the journey</string>
    <string name="sedentary">Sedentary</string>
    <string name="activity_level">Activity Level: </string>
    <string name="little_or_no_exercise">Little or no exercise</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="lightly_active">Lightly active</string>
    <string name="sports_1_3_days">Sports 1–3 days/week</string>
    <string name="moderately_active">Moderately active</string>
    <string name="sports_3_5_days_week">Sports  3–5 days/week</string>
    <string name="very_active">Very active</string>
    <string name="sports_6_7_days_week">Sports 6–7 days/week</string>
    <string name="extremely_active">Extremely active</string>
    <string name="training_twice_a_day">Training twice a day</string>
    <string name="what_is_your_goal">What is your goal?</string>
    <string name="lose_weight">Lose weight</string>
    <string name="maintain_weight">Maintain weight</string>
    <string name="gain_weight">Gain weight</string>
    <string name="calories_variable">variable calories:</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="menu_ingredients">Ingredients</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="remember_me">Remember me</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="you_are_on_the_road">You Are on The Road</string>
    <string name="calories">Calories:</string>
    <string name="protein">Protein:</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="add">Add</string>
    <string name="sugar">Sugar</string>
    <string name="natural">natural</string>
    <string name="per_100gr">Per 100gr</string>
    <string name="confirm">Confirm</string>
    <string name="enter_quantity">Input</string>

</resources>