<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_backgroud"
    tools:context=".SignUp"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_above="@id/card_view">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/lets_start_the_journey"
            android:textSize="30sp"
            android:textColor="@color/yellow1"
            android:textStyle="bold"
            />




    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="50dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:drawablePadding="10dp"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AgeL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:autofillHints="age" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/HeightL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/height"
                    android:inputType="numberDecimal"
                    android:autofillHints="height" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/WeightL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal"
                    android:autofillHints="weight" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_gravity="center"/>

                <RadioGroup
                    android:id="@+id/rdGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Male"
                        android:text="@string/male"
                        android:checked="true"                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Female"
                        android:text="@string/female"/>

                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_level"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/sedentary"/>
            </LinearLayout>

            <SeekBar
                android:id="@+id/SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:max="4"
                android:progress="0"
                />

            <TextView
                android:id="@+id/activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/little_or_no_exercise"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_gravity="center"
                android:textSize="25sp"/>

        </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>


</RelativeLayout>