<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_backgroud"
    android:gravity="center"
    tools:context=".Signup1">


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/what_is_your_goal"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rdgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/cbxLose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lose_weight" />

                <RadioButton
                    android:id="@+id/cbxMaintain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/maintain_weight" />

                <RadioButton
                    android:id="@+id/cbxGain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gain_weight" />

            </RadioGroup>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories_variable"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="0"
                    android:textColor="@color/turquoise"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/Seekbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:max="3"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next"
                android:textSize="25sp" />

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>