<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup0"
    android:gravity="center_horizontal"
    android:background="@drawable/signup_backgroud">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="280dp"
        app:cardCornerRadius="28dp"
        android:layout_marginTop="275dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:drawableStart="@drawable/person_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:drawablePadding="10dp"
                    android:minHeight="48dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PassLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Pass"
                    android:drawableStart="@drawable/lock_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:drawablePadding="10dp"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/next"
                android:padding="10dp"
                android:textSize="20sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>